[package]
name = "esp32-rerust"
version = "0.1.0"
authors = ["Julius Lehmann <julius@devpi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rerust = {path = "../rerust"}
xtensa-lx-rt = { version = "0.5", features = ["lx6"] }
xtensa-lx = { version = "0.3", features = ["lx6"] }
esp32-hal = { path = "../esp32-hal" , features = ["alloc", "mem"] }
if_chain = "1.0"
esp32 = "0.10"